docs/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
